--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -1,37 +1,120 @@
-/* BASIC */
 
-.div-panel {
-  background-color: #080808;
-  width: 100%;
-  height: 100%;
+body, html {
+  background-color: #D50000;
+}
+
+.overlay {
   position: absolute;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 100vh;
+  background-color: rgba(0, 0, 0, 0.75); /* Voile noir avec une opacité de 75% */
+  z-index: 2; /* Assurez-vous que l'overlay est au-dessus des autres éléments */
 }
 
-a {
-  color: #D50000;
-  display: inline-block;
-  text-decoration: none;
-  font-weight: 400;
+.registration-widget {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #CB4D4D;
+  color: white;
+  justify-content: space-between;
+  padding: 40px;
+  width: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 10; /* Le widget d'inscription doit être au-dessus de l'overlay */
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  gap: 10px; /* Spacing between children */
 }
 
-.h2-login {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  display: inline-block;
-  margin: 20px 8px 10px 8px;
-  color: #FFFFFF;
-  cursor: pointer;
+.welcome {
+  font-style: italic;
+  font-weight: bold;
+  margin-bottom: 40px;
 }
+
+.registration-widget [type="submit"] {
+  color: white;
+  background-color: #1B1B1B;
+  border-radius: 20px;
+  border: none; /* Supprime la bordure par défaut */
+  font-size: larger;
+  cursor: pointer; /* Change le curseur lors du survol */
+  padding: 10px 20px; /* Ajoute un peu de rembourrage pour rendre le bouton plus grand */
+  width: 50%; /* Ajustez selon vos préférences */
+  margin: 20px 80px 0;
+}
+
+.registration-widget [type="text"],
+.registration-widget [type="email"],
+.registration-widget [type="password"] {
+  background-color: white;
+  border-radius: 15px;
+  font-size:small;
+  font-weight: bold;
+  color:#1B1B1B;
+  padding: 10px 20px; /* Ajoute un peu de rembourrage pour rendre les entrées plus grandes */
+  width: 100%; /* Prend toute la largeur du parent */
+  box-sizing: border-box; /* S'assure que la bordure et le rembourrage sont inclus dans la largeur totale */
+  border: 1px solid #ccc; /* Ajoute une bordure subtile */
+  margin: 6px 0;
+}
+
+/*Pour que le nav bar apparaisse au dessus de l'overlay*/
+.aboveOverlay {
+  position: relative;
+  z-index: 2;
+}
+
+.modal-content {
+  border-radius: 20px;
+  background-color: #CB4D4D;
+}
+.modal-content [id="inputEmailChange"] {
+  font-size: small;
+  font-weight: bold;
+}
+.modal-content [type="button"],
+.modal-content [type="submit"] {
+  background-color: #1B1B1B;
+  border-color:#1B1B1B;
+  border-radius: 25px;
+}
+.modal-title {
+  position: absolute;
+  left: 30%;
+  color: white;
+}
+
+
+.my-navbar {
+  background-color: #1B1B1B;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  color: white;
+  padding: 10px;
+  font-style: italic;
+}
+.red {
+  color: red;
+}
+.navbar-brand {
+  margin-left: 10px; /* Ajustez cette valeur pour augmenter/diminuer l'espace à gauche */
+}
+
 
 /* STRUCTURE */
-
+.underlineHover-link-pointer {
+  color: black;
+  margin: 20px 95px 0;
+}
 .wrapper {
   display: flex;
   align-items: center;
@@ -45,28 +128,19 @@ a {
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
-  background: #FFFFFF;
+  background: #fff;
   padding: 30px;
   width: 90%;
   max-width: 450px;
   position: relative;
   padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 #080808;
-  box-shadow: 0 30px 60px 0 #080808;
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   text-align: center;
-}
-
-#formFooter {
-  background-color: #FFFFFF;
-  border-top: 1px solid #FFFFFF;
-  padding: 25px;
-  text-align: center;
-  -webkit-border-radius: 0 0 10px 10px;
-  border-radius: 0 0 10px 10px;
 }
 
 #formHeader {
-  background-color: #FFFFFF;
+  background-color: #f6f6f6;
   text-align: center;
   -webkit-border-radius: 10px 10px 0px 0px;
   border-radius: 10px 10px 0px 0px;
@@ -77,30 +151,32 @@ a {
 /* TABS */
 
 .h2-login.inactive {
-  color: #FFFFFF;
+  color: #cccccc;
 }
 
 .h2-login.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #D50000;
+  border-bottom: 2px solid #5fbae9;
 }
+
+
 
 /* FORM TYPOGRAPHY*/
 
 input[type=button],
 .btn-login,
 input[type=reset] {
-  background-color: #D50000;
+  background-color: #1B1B1B;
   border: none;
-  color: #FFFFFF;
+  color: rgb(0, 0, 0);
   padding: 15px 80px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 #D50000;
-  box-shadow: 0 10px 30px 0 #D50000;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -114,7 +190,7 @@ input[type=reset] {
 input[type=button]:hover,
 .btn-login:hover,
 input[type=reset]:hover {
-  background-color: #D50000;
+  background-color: #1B1B1B;
 }
 
 input[type=button]:active,
@@ -131,7 +207,7 @@ input[type=text],
 input[type=password],
 input[type=number],
 select {
-  background-color: #FFFFFF;
+  background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
   padding: 15px 32px;
@@ -141,7 +217,7 @@ select {
   font-size: 16px;
   margin: 5px;
   width: 85%;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #f6f6f6;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -ms-transition: all 0.5s ease-in-out;
@@ -155,16 +231,17 @@ input[type=text]:focus,
 input[type=password]:focus,
 input[type=number]:focus,
 select:focus {
-  background-color: #FFFFFF;
-  border-bottom: 2px solid #D50000;
+  background-color:#0d0d0d;
+  border-bottom: 2px solid #1B1B1B;
 }
 
-input[type=text]:placeholder,
+input[type=text]::placeholder,
 input[type=password]::placeholder,
 input[type=number]::placeholder,
 select::placeholder {
-  color: #FFFFFF;
+  color: #cccccc;
 }
+
 
 
 /* ANIMATIONS */
@@ -284,13 +361,13 @@ select::placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #D50000;
+  background-color: #56baed;
   content: "";
   transition: width 0.2s;
 }
 
 .underlineHover:hover {
-  color: #080808;
+  color: #0d0d0d;
 }
 
 .underlineHover:hover:after {
