--- a/src/pages/registration/styles.css
+++ b/src/pages/registration/styles.css
@@ -1,70 +1,108 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-
-/* BASIC */
-
-.loading-refresh-animate {
-  -animation: spin .7s infinite linear;
-  -webkit-animation: spin2 .7s infinite linear;
+body, html {
+  background-color: #D50000;
 }
-
-@-webkit-keyframes spin2 {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  from {
-    transform: scale(1) rotate(0deg);
-  }
-
-  to {
-    transform: scale(1) rotate(360deg);
-  }
-}
-
-.div-panel {
-  background-color: #080808;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
+/* STRUCTURE pour le register*/
+/* */
+/* Ajout de l'overlay dark */
+.background {
+  position: absolute; /* pour positionner correctement les enfants absolus comme l'overlay */
+  z-index: 1;
+  background-position: center center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat; /* Centrer verticalement */
+  width: 100vw;
   height: 100vh;
 }
-
-a {
-  color: #92badd;
-  display: inline-block;
-  text-decoration: none;
-  font-weight: 400;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.75); /* Voile noir avec une opacité de 75% */
+  z-index: 2; /* Assurez-vous que l'overlay est au-dessus des autres éléments */
 }
 
-h2 {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  display: inline-block;
-  margin: 20px 8px 10px 8px;
-  color: #cccccc;
-  cursor: pointer;
+.registration-widget {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #CB4D4D;
+  color: white;
+  justify-content: space-between;
+  padding: 40px;
+  width: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 10; /* Le widget d'inscription doit être au-dessus de l'overlay */
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  gap: 10px; /* Spacing between children */
 }
 
+.welcome {
+  font-style: italic;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
 
+.registration-widget [type="submit"] {
+  color: white;
+  background-color: #1B1B1B;
+  border-radius: 20px;
+  border: none; /* Supprime la bordure par défaut */
+  font-size: larger;
+  cursor: pointer; /* Change le curseur lors du survol */
+  padding: 10px 20px; /* Ajoute un peu de rembourrage pour rendre le bouton plus grand */
+  width: 50%; /* Ajustez selon vos préférences */
+  margin: 20px 80px 0;
+}
 
-/* STRUCTURE */
+.registration-widget [type="text"],
+.registration-widget [type="email"],
+.registration-widget [type="password"] {
+  background-color: white;
+  border-radius: 15px;
+  font-size:small;
+  font-weight: bold;
+  color:#1B1B1B;
+  padding: 10px 20px; /* Ajoute un peu de rembourrage pour rendre les entrées plus grandes */
+  width: 100%; /* Prend toute la largeur du parent */
+  box-sizing: border-box; /* S'assure que la bordure et le rembourrage sont inclus dans la largeur totale */
+  border: 1px solid #ccc; /* Ajoute une bordure subtile */
+  margin: 6px 0;
+}
 
+/*Pour que le nav bar apparaisse au dessus de l'overlay*/
+.aboveOverlay {
+  position: relative;
+  z-index: 2;
+}
+
+.my-navbar {
+  background-color: #1B1B1B;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  color: white;
+  padding: 10px;
+  font-style: italic;
+}
+.red {
+  color: red;
+}
+.navbar-brand {
+  margin-left: 10px; /* Ajustez cette valeur pour augmenter/diminuer l'espace à gauche */
+}
+
+/* STRUCTURE pour le register*/
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column; 
   justify-content: center;
   width: 100%;
   min-height: 100%;
@@ -80,8 +118,8 @@ h2 {
   max-width: 450px;
   position: relative;
   padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   text-align: center;
 }
 
@@ -95,12 +133,12 @@ h2 {
 }
 
 #formHeader {
-  background-color: #f6f6f6;
-  border-top: 1px solid #dce8f1;
-  text-align: center;
-  -webkit-border-radius: 10px 10px 0px 0px;
-  border-radius: 10px 10px 0px 0px;
-}
+    background-color: #f6f6f6;
+    border-top: 1px solid #dce8f1;
+    text-align: center;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+  }
 
 
 
@@ -112,17 +150,43 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #D50000;
+  border-bottom: 2px solid #5fbae9;
 }
 
-
+.container2 {
+  position: absolute; /* Positionnement absolu par rapport à container2 */
+  top: 27%; /* Centre l'image verticalement */
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  width: 80vw; /* 100% of the viewport width */
+  height: 40vh; /* 40% of the viewport height */
+  overflow: hidden; /* Ensure no spillover from the container */
+  color: #D50000 ;
+  font-style: italic;
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+  border-radius: 25px;
+}
+.container2 h1 .red {
+  color: #D50000; /* For "Bet" */
+  font-style: italic;
+}
+.container2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3); /* This creates a dark overlay. Adjust the 0.3 as needed. */
+  z-index: 0;
+}
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button],
-.btn-register,
-input[type=reset] {
-  background-color: #D50000;
+input[type=button], .btn-register, input[type=reset]  {
+  background-color: #56baed;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -131,8 +195,8 @@ input[type=reset] {
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
-  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(243, 246, 248, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -143,15 +207,11 @@ input[type=reset] {
   transition: all 0.3s ease-in-out;
 }
 
-input[type=button]:hover,
-.btn-register:hover,
-input[type=reset]:hover {
-  background-color: #D50000;
+input[type=button]:hover, .btn-register:hover, input[type=reset]:hover  {
+  background-color: #39ace7;
 }
 
-input[type=button]:active,
-.btn-register:active,
-input[type=reset]:active {
+input[type=button]:active, .btn-register:active, input[type=reset]:active  {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
@@ -159,9 +219,7 @@ input[type=reset]:active {
   transform: scale(0.95);
 }
 
-input[type=text],
-input[type=password],
-input[type=email] {
+input[type=text], input[type=password], input[type=email] {
   background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
@@ -182,16 +240,12 @@ input[type=email] {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type=text]:focus,
-input[type=password]:focus,
-input[type=email]:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #D50000;
+  border-bottom: 2px solid #5fbae9;
 }
 
-input[type=text]::placeholder,
-input[type=password]::placeholder,
-input[type=email]::placeholder {
+input[type=text]::placeholder, input[type=password]::placeholder, input[type=email]::placeholder {
   color: #cccccc;
 }
 
@@ -215,7 +269,6 @@ input[type=email]::placeholder {
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -229,7 +282,6 @@ input[type=email]::placeholder {
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
-
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -238,49 +290,23 @@ input[type=email]::placeholder {
 }
 
 /* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@-moz-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 .fadeIn {
-  opacity: 0;
-  -webkit-animation: fadeIn ease-in 1;
-  -moz-animation: fadeIn ease-in 1;
-  animation: fadeIn ease-in 1;
+  opacity:0;
+  -webkit-animation:fadeIn ease-in 1;
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode:forwards;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
 
-  -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
-  animation-duration: 1s;
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
 }
 
 .fadeIn.first {
@@ -332,7 +358,7 @@ input[type=email]::placeholder {
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #D50000;
+  background-color: #56baed;
   content: "";
   transition: width 0.2s;
 }
@@ -341,7 +367,7 @@ input[type=email]::placeholder {
   color: #0d0d0d;
 }
 
-.underlineHover:hover:after {
+.underlineHover:hover:after{
   width: 100%;
 }
 
@@ -350,13 +376,12 @@ input[type=email]::placeholder {
 /* OTHERS */
 
 *:focus {
-  outline: none;
-}
+    outline: none;
+} 
 
 .form-padding {
-  margin-top: 5px;
+    margin-top: 5px;
 }
-
 * {
   box-sizing: border-box;
 }
